Update secret name to match README

--- a/fluxcd/clusters/staging/apps/helm-actions-runner-controller.yml
+++ b/fluxcd/clusters/staging/apps/helm-actions-runner-controller.yml
@@ -15,7 +15,7 @@ spec:
       version: 0.21.0
   values:
     authSecret:
-      name: arrowci-controller-auth-secret
+      name: controller-manager
       create: false
     nodeSelector:
       kubernetes.io/os: linux
